--- a/css/_third-container.scss
+++ b/css/_third-container.scss
@@ -74,4 +74,30 @@
       }
     }
   }
+  a {
+    text-decoration: none;
+    color: blanchedalmond;
+    opacity: 0.7;
+    &:hover {
+      color: rgb(0, 179, 250);
+      opacity: 1;
+    }
+  }
+  .third-container__scroll {
+    position: fixed;
+    right: 30px;
+    bottom: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    z-index: 5;
+    cursor: pointer;
+
+    p {
+      font-size: 40px;
+      font-weight: 400;
+      line-height: 5px;
+      letter-spacing: 2.8px;
+    }
+  }
 }
