--- a/css/_all-style.scss
+++ b/css/_all-style.scss
@@ -3,22 +3,15 @@
   padding: 0;
 }
 
-body {
-  background-color: #333333;
+html {
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
-@media all and (max-width: 1200px) {
-  div {
-    width: 960px;
-  }
-}
-@media all and (max-width: 575px) {
-  div {
-    width: 482px;
-  }
-}
-@media all and (max-width: 480px) {
-  div {
-    width: 320px;
-  }
+body {
+  background-color: #333333;
+  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
 }
