--- a/css/_fifth-container.scss
+++ b/css/_fifth-container.scss
@@ -1,24 +1,26 @@
 .fifth-container {
-  background-image: url("../img/StrangeHouse.png");
-  background-repeat: no-repeat;
-  background-size: 100%;
+  background-image: url("../img/Rectangle\ 414.png");
   width: 100%;
   max-width: 1770px;
   height: 700px;
   margin: 0 auto;
   @extend %message-border;
+  position: relative;
 
   .fifth-container__text {
-    width: 100%;
-    max-width: 540px;
-    height: 371px;
     background-color: rgba(35, 35, 35, 0.8);
     color: #fff;
     font-family: "Josefin Sans";
     padding-left: 30px;
-    position: relative;
-    top: 230px;
-    left: 330px;
+    position: absolute;
+    width: 50%;
+    max-width: 500px;
+    height: 50%;
+    max-height: 470px;
+    left: 30%;
+    top: 50%;
+    transform: translateX(-30%) translateY(-50%);
+    transition-duration: 0.6s;
 
     .fifth-container__text_header {
       font-size: 20px;
@@ -39,7 +41,7 @@
     }
 
     .fifth-container__text_text {
-      width: 100%;
+      width: 90%;
       max-width: 518px;
       height: 68px;
       font-size: 14px;
@@ -48,27 +50,35 @@
       text-align: left;
       margin-top: 30px;
     }
+    a {
+      text-decoration: none;
+      color: white;
 
-    .fifth-container__text_button {
-      width: 100%;
-      max-width: 225px;
-      height: 45px;
-      background-color: #5474fd;
-      font-family: Aleo;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 26px;
-      text-align: left;
-      text-transform: uppercase;
-      letter-spacing: 1.2px;
-      margin-top: 40px;
-      text-align: center;
-      padding-top: 20px;
-      cursor: pointer;
+      .fifth-container__text_button {
+        width: 100%;
+        max-width: 225px;
+        height: 45px;
+        background-color: #5474fd;
+        font-family: Aleo;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        text-align: left;
+        text-transform: uppercase;
+        letter-spacing: 1.2px;
+        margin-top: 40px;
+        text-align: center;
+        padding-top: 20px;
+        cursor: pointer;
 
-      &:hover {
-        background-color: crimson;
+        &:hover {
+          background-color: crimson;
+        }
       }
+    }
+    &:hover {
+      transform: scale(1.2) translateX(-25%) translateY(-45%);
+      opacity: 1;
     }
   }
 }
