--- a/css/_first-container.scss
+++ b/css/_first-container.scss
@@ -2,7 +2,6 @@
   font-family: "Josefin Sans";
   background-image: url("../img/mountain.png");
   background-repeat: no-repeat;
-  background-size: 100%;
   width: 100%;
   max-width: 1770px;
   height: 820px;
@@ -12,11 +11,10 @@
   @extend %message-border;
 
   .first-container__text {
-    width: 100%;
-    max-width: 1770px;
     padding-top: 200px;
-    display: inline-block;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     margin-top: 60px;
 
     .first-container__text_header {
@@ -41,8 +39,7 @@
 
     form {
       position: relative;
-      width: 100%;
-      max-width: 650px;
+      width: 650px;
     }
 
     input,
@@ -52,8 +49,7 @@
     }
 
     input {
-      width: 100%;
-      max-width: 500px;
+      width: 500px;
       height: 60px;
       font-size: 24px;
       padding-left: 20px;
@@ -71,8 +67,7 @@
     }
 
     button {
-      width: 100%;
-      max-width: 150px;
+      width: 150px;
       height: 60px;
       position: absolute;
       border: 1px solid #fff;
@@ -99,19 +94,159 @@
       }
     }
   }
+  a {
+    text-decoration: none;
+    color: white;
 
-  .first-container__scroll {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    padding-top: 90px;
-    cursor: pointer;
+    .first-container__scroll {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      padding-top: 90px;
+      cursor: pointer;
 
-    p {
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 26px;
-      letter-spacing: 2.8px;
+      p {
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: 2.8px;
+      }
+
+      .arrow-down {
+        margin: 30px;
+      }
+      .arrow-down span {
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-bottom: 5px solid #fff;
+        border-right: 5px solid #fff;
+        transform: rotate(45deg);
+        margin: -8px;
+        animation: arrow-down 2s infinite;
+      }
+      .arrow-down span:nth-child(2) {
+        animation-delay: -0.2s;
+      }
+      .arrow-down span:nth-child(3) {
+        animation-delay: -0.4s;
+      }
+      @keyframes arrow-down {
+        0% {
+          opacity: 0;
+          transform: rotate(45deg) translate(-20px, -20px);
+        }
+        50% {
+          opacity: 1;
+        }
+        100% {
+          opacity: 0;
+          transform: rotate(45deg) translate(20px, 20px);
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 1800px) {
+  .first-container {
+    width: 100%;
+    max-width: 1770px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .first-container {
+    width: 100%;
+    max-width: 1179px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .first-container {
+    width: 100%;
+    max-width: 991px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .first-container {
+    width: 100%;
+    max-width: 767px;
+
+    .first-container__search-form {
+      form {
+        width: 100%;
+        padding: 20px;
+      }
+
+      input {
+        width: 100%;
+        height: 60px;
+      }
+
+      button {
+        width: 100%;
+        height: 60px;
+        position: relative;
+        margin-top: 20px;
+      }
+    }
+
+    .first-container__scroll {
+      p {
+        font-size: 18px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .first-container {
+    width: 100%;
+    max-width: 575px;
+
+    .first-container__text {
+      padding-top: 150px;
+
+      .first-container__text_header {
+        font-size: 38px;
+      }
+
+      .first-container__text_header_second {
+        font-size: 15px;
+        margin-top: 5px;
+      }
+    }
+
+    .first-container__search-form {
+      padding-top: 60px;
+
+      form {
+        width: 100%;
+        padding: 20px;
+      }
+
+      input {
+        width: 100%;
+      }
+
+      ::placeholder {
+        font-size: 14px;
+        letter-spacing: 0.9px;
+      }
+
+      button {
+        width: 100%;
+        position: relative;
+        margin-top: 20px;
+      }
+    }
+
+    .first-container__scroll {
+      p {
+        font-size: 18px;
+      }
     }
   }
 }
