--- a/css/_sixth-container.scss
+++ b/css/_sixth-container.scss
@@ -5,18 +5,23 @@
   height: 700px;
   margin: 0 auto;
   @extend %message-border;
+  position: relative;
 
   .sixth-container__text {
-    width: 100%;
-    max-width: 540px;
-    height: 371px;
     background-color: rgba(35, 35, 35, 0.8);
     color: #fff;
     font-family: "Josefin Sans";
     padding-left: 30px;
-    position: relative;
-    top: 230px;
-    left: 930px;
+    position: absolute;
+    width: 50%;
+    max-width: 500px;
+    height: 50%;
+    max-height: 470px;
+    left: 70%;
+    top: 50%;
+    transform: translateX(-70%) translateY(-50%);
+    opacity: 0.7;
+    transition-duration: 0.6s;
 
     .sixth-container__text_header {
       font-size: 20px;
@@ -37,7 +42,7 @@
     }
 
     .sixth-container__text_text {
-      width: 100%;
+      width: 90%;
       max-width: 518px;
       height: 68px;
       font-size: 14px;
@@ -46,27 +51,35 @@
       text-align: left;
       margin-top: 30px;
     }
+    a {
+      text-decoration: none;
+      color: white;
 
-    .sixth-container__text_button {
-      width: 100%;
-      max-width: 225px;
-      height: 45px;
-      background-color: #5474fd;
-      font-family: Aleo;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 26px;
-      text-align: left;
-      text-transform: uppercase;
-      letter-spacing: 1.2px;
-      margin-top: 40px;
-      text-align: center;
-      padding-top: 20px;
-      cursor: pointer;
+      .sixth-container__text_button {
+        width: 100%;
+        max-width: 225px;
+        height: 45px;
+        background-color: #5474fd;
+        font-family: Aleo;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        text-align: left;
+        text-transform: uppercase;
+        letter-spacing: 1.2px;
+        margin-top: 40px;
+        text-align: center;
+        padding-top: 20px;
+        cursor: pointer;
 
-      &:hover {
-        background-color: hotpink;
+        &:hover {
+          background-color: hotpink;
+        }
       }
+    }
+    &:hover {
+      opacity: 1;
+      transform: scale(1.2) translateX(-60%) translateY(-45%);
     }
   }
 }
