--- a/css/_third-container.scss
+++ b/css/_third-container.scss
@@ -1,6 +1,7 @@
 .third-container {
-  background-image: url("../img/whyChooseus.png");
-  width: 1770px;
+  background-image: url("../img/second-container.png");
+  width: 100%;
+  max-width: 1770px;
   height: 685px;
   color: #ffffff;
   margin: 0 auto;
@@ -21,8 +22,7 @@
     }
 
     .third-container__text_main-text {
-      width: 100%;
-      max-width: 610px;
+      width: 610px;
       height: 146px;
       color: #e8e8e8;
       font-family: "Josefin Sans";
@@ -33,23 +33,27 @@
       letter-spacing: 1.6px;
       margin-top: 60px;
     }
+    a {
+      text-decoration: none;
+      color: white;
 
-    .third-container__text_button {
-      width: 225px;
-      height: 45px;
-      background-color: #5474fd;
-      text-align: center;
-      margin-top: 50px;
-      padding-top: 20px;
-      text-transform: uppercase;
-      font-size: 16px;
-      font-weight: 400;
-      line-height: 26px;
-      letter-spacing: 1.2px;
-      cursor: pointer;
+      .third-container__text_button {
+        width: 225px;
+        height: 45px;
+        background-color: #5474fd;
+        text-align: center;
+        margin-top: 50px;
+        padding-top: 20px;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 26px;
+        letter-spacing: 1.2px;
+        cursor: pointer;
 
-      &:hover {
-        background-color: chartreuse;
+        &:hover {
+          background-color: chartreuse;
+        }
       }
     }
   }
@@ -74,30 +78,186 @@
       }
     }
   }
-  a {
-    text-decoration: none;
-    color: blanchedalmond;
-    opacity: 0.7;
-    &:hover {
-      color: rgb(0, 179, 250);
-      opacity: 1;
+}
+
+@media screen and (max-width: 1800px) {
+  .third-container {
+    width: 100%;
+    max-width: 1770px;
+
+    .third-container__image {
+      margin-right: 70px;
+
+      .third-container__image_second-picture {
+        margin-left: 0px;
+      }
     }
   }
-  .third-container__scroll {
-    position: fixed;
-    right: 30px;
-    bottom: 20px;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    z-index: 5;
-    cursor: pointer;
+}
 
-    p {
-      font-size: 40px;
-      font-weight: 400;
-      line-height: 5px;
-      letter-spacing: 2.8px;
+@media screen and (max-width: 1199px) {
+  .third-container {
+    width: 100%;
+    max-width: 1179px;
+
+    .third-container__text {
+      margin-right: 20px;
+
+      .third-container__text_header {
+        font-size: 30px;
+        margin-top: 85px;
+      }
+
+      .third-container__text_main-text {
+        width: 310px;
+        height: 146px;
+        font-size: 16px;
+        margin-top: 50px;
+      }
+
+      .third-container__text_button {
+        margin-top: 150px;
+        margin-left: 40px;
+      }
+    }
+
+    .third-container__image {
+      margin-right: 170px;
+
+      .third-container__image_second-picture {
+        margin-left: 0px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .third-container {
+    width: 100%;
+    max-width: 991px;
+
+    .third-container__text {
+      margin-right: 20px;
+      margin-top: 50px;
+
+      .third-container__text_header {
+        font-size: 30px;
+        margin-top: 40px;
+      }
+
+      .third-container__text_main-text {
+        width: 310px;
+        height: 146px;
+        font-size: 20px;
+        margin-top: 50px;
+      }
+
+      .third-container__text_button {
+        width: 100%;
+        margin-top: 250px;
+        margin-left: 170px;
+      }
+    }
+
+    .third-container__image {
+      margin-right: 170px;
+
+      .third-container__image_second-picture {
+        margin-left: 0px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .third-container {
+    width: 100%;
+    max-width: 767px;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    background-image: none;
+    background-color: #383d3f;
+
+    .third-container__text {
+      margin: 0 auto;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-top: 10px;
+
+      .third-container__text_header {
+        font-size: 30px;
+        margin-top: 45px;
+        text-align: center;
+      }
+
+      .third-container__text_main-text {
+        width: 100%;
+        height: 46px;
+        font-size: 20px;
+        margin-top: 50px;
+      }
+
+      .third-container__text_button {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 190px;
+      }
+    }
+
+    .third-container__image {
+      margin: 40px auto;
+
+      .third-container__image_second-picture {
+        width: 100%;
+        margin-left: 90px;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 575px) {
+  .third-container {
+    width: 100%;
+    max-width: 575px;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    background-image: none;
+    background-color: #383d3f;
+
+    .third-container__text {
+      margin: 0 auto;
+      padding-left: 20px;
+      padding-right: 20px;
+      margin-top: 10px;
+
+      .third-container__text_header {
+        font-size: 30px;
+        margin-top: 45px;
+        text-align: center;
+      }
+
+      .third-container__text_main-text {
+        width: 100%;
+        height: 100%;
+        font-size: 20px;
+        margin-top: 50px;
+      }
+
+      .third-container__text_button {
+        width: 100%;
+        margin: 0 auto;
+        margin-top: 40px;
+      }
+    }
+
+    .third-container__image {
+      margin: 40px auto;
+
+      .third-container__image_second-picture {
+        margin: 0 auto;
+      }
     }
   }
 }
