--- a/css/style.css
+++ b/css/style.css
@@ -917,9 +917,17 @@ body {
   padding-right: 80px;
 }
 
+.fourth-container .fourth-container__block img {
+  -webkit-transition-duration: 0.7s;
+          transition-duration: 0.7s;
+  z-index: 5;
+  background-color: #333333;
+  border-radius: 30%;
+}
+
 .fourth-container .fourth-container__block img:hover {
-  -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .fourth-container .fourth-container__block p {
